# MyNotes

./: .gitignore  .gitmodules  AboutDialog.cpp  AboutDialog.h  BeanFactory.h  CLAUDE.md  CMakeLists.txt  ChooseFolderWidget.h  Constant.cpp  Constant.h  DbManager.cpp  DbManager.h  DbModel.cpp  DbModel.h  DbThread.cpp  DbThread.h  ElasticSearchRestApi.cpp  ElasticSearchRestApi.h  FileSystemWatcher.cpp  FileSystemWatcher.h  HtmlExporter.cpp  HtmlExporter.h  Http.cpp  Http.h  Indexer.cpp  Indexer.h  ListModel.cpp  ListModel.h  ListView.cpp  ListView.h  LoginApi.cpp  LoginApi.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MdToHtml.cpp  MdToHtml.h  MyNotes_zh_CN.ts  (+49 more)
android/: AndroidManifest.xml
android/src/cn/net/pikachu/: NoteActivity.java
assets/: icon.qrc
assets/css/: typora.css
assets/sql/: create_table_path.sql  create_trigger_path_auto_update_time.sql
cmake/: DownloadDependencies.cmake
desktop/: Clipboard.cpp  Clipboard.h  Controller.cpp  Controller.h  TreeModelAdaptor.cpp  main.cpp
desktop/qml/: NoteTreeView.qml  SettingDialog.qml  Toast.qml  TreeView.qml  main.qml  qml.qrc
docs/superpowers/plans/: 2026-05-01-widget-split.md  2026-05-02-directory-reorg-plan.md  2026-05-02-markdown-highlight-realtime-preview.md
docs/superpowers/specs/: 2026-05-01-widget-split-design.md  2026-05-02-directory-reorg-design.md  2026-05-02-markdown-highlight-realtime-preview-design.md
mobile/: Controller.cpp  Controller.h  FileSystem.cpp  main.cpp
mobile/qml/: FileListView.qml  NoteListItem.qml  NoteListView.qml  NoteView.qml  main.qml  qml.qrc
plugin/: CMakeLists.txt
plugin/webview/: CMakeLists.txt
sql/: create_table_note.sql  create_table_path.sql  create_trigger_note_auto_update_time.sql  create_trigger_path_auto_update_time.sql
src/: AboutDialog.h  BeanFactory.cpp  CMakeLists.txt  ChooseFolderWidget.cpp  Constant.cpp  DbManager.cpp  DbManager.h  DbModel.cpp  DbModel.h  ElasticSearchRestApi.h  Indexer.cpp  Indexer.h  Info.plist  ListModel.cpp  ListModel.h  LoginApi.cpp  LoginDialog.cpp  MainWindow.cpp  MyNotes_zh_CN.ts  NoteController.cpp  NoteController.h  PiDialog.cpp  PiWidget.h  README.md  SearchDialog.cpp  SearchDialog.h  Settings.cpp  Settings.h  SingleApplication.cpp  SingleApplication.h  TabBar.cpp  TabWidget.cpp  TextPreview.cpp  TextPreview.h  Toast.h  TreeItem.cpp  TreeModel.cpp  TreeModel.h  TrojanThread.cpp  TrojanThread.h  (+6 more)
src/appcore/: CMakeLists.txt  SingleApplication.cpp  TrayIconManager.cpp  TrayIconManager.h
src/assets/: css.qrc  icon.qrc
src/assets/css/: css518.css  github-markdown.css
src/auth/: CMakeLists.txt  LoginApi.cpp  LoginApi.h  LoginDialog.cpp  LoginDialog.h
src/control/: TreeModelAdaptor.cpp  TreeModelAdaptor.h
src/controller/: Controller.cpp  Controller.h  FileSystem.cpp  FileSystem.h  KeyFilter.cpp  KeyFilter.h  SettingDialogController.h
src/database/: CMakeLists.txt  DbManager.cpp  DbManager.h  DbModel.cpp
src/desktop/: Controller.h  SettingDialogController.cpp
src/desktop/qml/: InputDialog.qml  NoteTreeView.qml  Toast.qml  main.qml  qml.qrc
src/dialogs/: AboutDialog.cpp  CMakeLists.txt  ChooseFolderWidget.cpp  ChooseFolderWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/editor/: CMakeLists.txt  MarkdownHighlighter.cpp  MarkdownHighlighter.h  NoteEditorWidget.cpp  TabBar.cpp  TabWidget.cpp  TextPreview.cpp  WebEngineView.cpp
src/export/: CMakeLists.txt  HtmlExporter.cpp  HtmlExporter.h  WatchingFileHtmlVisitor.cpp
src/indexer/: CMakeLists.txt  Indexer.cpp
src/mobile/: Controller.cpp  FileSystem.h  main.cpp
src/mobile/qml/: NoteListItem.qml  NoteView.qml  qml.qrc
src/navigation/: CMakeLists.txt  ListModel.cpp  ListView.cpp  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeView.cpp
src/network/: CMakeLists.txt  Http.cpp  TrojanThread.cpp
src/notes/: CMakeLists.txt  NoteFileService.cpp
src/qml/: FileListView.qml  MusicLyrics.qml  MusicPlayer.qml  NoteListView.qml  NoteTreeView.qml  NoteView.qml  Profile.qml  SettingDialog.qml  SettingView.qml  SideMenu.qml  Toast.qml  TreeView.qml  WebBrowser.qml  desktop_main.qml  mobile_main.qml  qml.qrc
src/search/: CMakeLists.txt  SearchController.cpp  SearchDialog.cpp
src/settings/: CMakeLists.txt  Settings.cpp
src/sync/: CMakeLists.txt  ElasticSearchRestApi.cpp  ElasticSearchRestApi.h  SyncService.cpp
src/test/: CMakeLists.txt
src/utils/: CMakeLists.txt  Constant.cpp  Singleton.h  Toast.cpp  Utils.cpp
src/watcher/: CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h
src/widgets/: CMakeLists.txt  MainWindow.cpp  PiDialog.cpp  PiDialog.h  PiWidget.cpp  Widget.cpp  Widget.h
test/: IndexerTest.cpp
